Committing changes: 1. Added more elements to top bar and main content including the main article. 2. To be improved: Struggling with overflowing content and flex boxes. Will continue to work on this to make sure we can get a consistent good experience. 3. If top Bar keeps throwing problems we can give them max height and sizes and let the user only zoom in the article.

--- a/VSA.css
+++ b/VSA.css
@@ -5,6 +5,7 @@ Declaring variables to be my primary color palette in VPA website.
 :root {
   --primary-color: #000000;
   --secondary-color: #8b0000;
+  --article-background-color: white;
   /* As we saw in class we declare a few options in case the user's browser doesn't support the first one. */
   --primary-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   /* Using the best practices values and  */
@@ -30,25 +31,54 @@ CSS Section dedicated to Top Bar Component
 
 */
 
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  box-sizing: border-box;
+  flex: 0.5;
+  /* max-height: 10vh; */
+}
+
 #topBar {
   background-color: var(--secondary-color);
   flex: 1;
+  max-height: 100%;
 }
 
 .topBarEl {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
   box-sizing: border-box;
-  /* height: 10vh; */
+  max-height: 100%;
+  width: 100%;
 }
 
-.topBarEl div img {
+#topLogo {
+  max-height: 90%;
+  flex: 1;
+}
+
+#topLogo img {
+  height: 10vh;
+  max-height: 40vh;
+}
+
+#TopBarTitle {
+  font-size: 2em;
   max-height: 90%;
   width: auto;
+  flex: 1;
 }
 
-.TopBarTitle {
-  font-size: 8em;
+#TopBarTitle h1 {
+  max-height: 90%;
+}
+
+#ButtonContainer {
+  flex: 1;
 }
 
 /*
@@ -60,26 +90,65 @@ main {
   flex-direction: row;
   box-sizing: border-box;
   border: 1px solid black;
-  flex: 2;
 }
 
 .LeftBar,
 .RightBar {
-  flex: 1;
+  flex: 0.25;
+  background-color: var(--primary-color);
 }
 
 .MainContent {
   flex: 2;
+  background-color: var(--article-background-color);
+}
+
+.articleImage img {
+  display: block;
+  max-width: 90%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.articleText h1,
+.articleText p {
+  display: block;
+  max-width: 90%;
+  height: auto;
+  margin: 0 auto;
+  padding: 0.5em;
+}
+
+.articleText p {
+  font-size: 1rem;
+}
+.articleText h1 {
+  font-size: 2rem;
+}
+
+article {
+  max-height: 80vh;
+  overflow-y: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+article h1,
+article p {
+  text-align: justify;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
 }
 
 main {
   flex: 5;
 }
-
 /*
 CSS Section dedicated to Footer Component
 */
 
 footer {
   flex: 0.5;
+  background-color: var(--secondary-color);
 }
